Adding logo, favicon, and text from previous home page.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<div class="container">
+			<div class="row">
+			  <div class="six columns">
+			  </div>
+			  <div class="six columns" style="margin-top: 25%">
+				<h4>Hello</h4>
+				<p>My name is Paul Diaz a.k.a. Sleepy Teary Eyed. I'm a music artist and sound designer for video games and film/video. Currently I'm working with <a target="_blank" href="http://basound.com/pages/home.html">BA Sound</a> and <a target="_blank" href="http://www.industrygames.com/">Industry Games</a> as a technical sound designer implementing audio for an unnanounced project using <a target="_blank" href="https://www.unrealengine.com/">UE4</a> + <a target="_blank" href="https://www.audiokinetic.com/">Wwise</a>. Here is my <a target="_blank" href="https://soundcloud.com/sleepytearyeyed">soundcloud</a> page for some of my music. My <a target="_blank" href="https://github.com/SleepyTearyEyed">github</a> containing all my personal coding projects including a vector graphics car racing game I'm working on. My <a target="_blank" href="https://twitter.com/SleepyTearyEyed">twitter</a> acount and <a href="mailto:pillars@gmail.com">email</a> if you want to reach me for anything.
+				</p>
+			  </div>
+			</div>
+			<div class="row">
+			  <div class="six columns">
+			  </div>
+			  <div class="six columns" style="margin-top: 5%">
+			  <p>Thanks and <3,</p>
+			  <img src="images/Logo.jpg">
+			  </div>
+			</div>
+		  </div>
 		<a href="/InterstateDrifter/InterstateDrifter.html">Interstate Drifter</a>
 	</body>
 </html>
